[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["notfoundium <t.r.yakubov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
strenum = "^0.4.15"
requests = "^2.31.0"
sqlalchemy = "=1.4.28"
pydantic = "1.9.0"
fastapi = {version = ">=0.70", extras = ["all"]}
fastapi-utils = "^0.2.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
black = "^24.1.1"
locust = "^2.22.0"
celery = "^5.3.6"
redis = "^5.0.1"
prometheus-fastapi-instrumentator = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
